# uneditor-ethcannes

./: .dockerignore  .env.example  LICENSE  README.md  docker-compose.yml
.cursor/rules/: default.mdc
agent/: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.dev.yml  docker-compose.yml  main.py  pyproject.toml  run_science_chat.py  run_science_chat_api.py
agent-template/: .env.example  .gitignore  README.md  pyproject.toml
agent-template/agent_template/: __init__.py  main.py
agent-template/agent_template/flows/: main_flow.py
agent-template/agent_template/prompts/: geography_expert_system.md  geography_expert_user.j2  world_classifier_system.md  world_classifier_user.j2
agent-template/agent_template/tasks/: geography_expert.py  world_classifier.py
agent/agent/: science_chat.py
agent/agent/prompts/: unredactor.j2
agent/agent_cache/papers/d172cfd4accf5d8bd80dc5b74847f22e1c7a51e3201735e3a4ce42bdaec4b001/: distilled.md
agent/agent_cache/papers/d172cfd4accf5d8bd80dc5b74847f22e1c7a51e3201735e3a4ce42bdaec4b001/datalab_temp/: article.md
demo-uagent/: Dockerfile  private_keys.json  pyproject.toml
demo-uagent/demo_uagent/: agent.py  chat_proto.py  football.py  mailbox_agent.py  my_first_agent.py
models/: DATALAB.md  pyproject.toml  run_console_chat.py  run_context_test.py  run_datalab_test.py
models/models/: __init__.py  chat.py  context.py  datalab.py  globals.py  semaphore.py  tools.py
taskman/: examples.py  examples_log.py  pyproject.toml
taskman/taskman/: __init__.py  cache.py  config.py  context.py  decorators.py  logging.py  utils.py
uagent/: .env.example  docker-compose.yml  pyproject.toml
uagent/uagent/: agent.py
