[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-template"
version = "0.1.0"
description = "A helloworld example of a multi-agent system."
requires-python = ">=3.13"
dependencies = [
    "pydantic",
    "pyyaml",
    "python-dotenv",
    'models @ {root:uri}/../models',
    'taskman @ {root:uri}/../taskman'
]

[project.scripts]
agent-template = "agent_template.main:main"

[tool.uv.sources]
scope_loader = { path = "../scope-loader" }
taskman = { path = "../taskman" }
models = { path = "../models" }

[tool.hatch.metadata]
allow-direct-references = true